deploy: ed4f056334933bf16ea315725870f7dae39cad7f

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:08.996142Z",
-     "iopub.status.busy": "2025-07-29T21:22:08.995982Z",
-     "iopub.status.idle": "2025-07-29T21:22:09.939708Z",
-     "shell.execute_reply": "2025-07-29T21:22:09.939117Z"
+     "iopub.execute_input": "2025-07-29T21:36:27.486462Z",
+     "iopub.status.busy": "2025-07-29T21:36:27.486284Z",
+     "iopub.status.idle": "2025-07-29T21:36:28.511409Z",
+     "shell.execute_reply": "2025-07-29T21:36:28.510743Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:09.941511Z",
-     "iopub.status.busy": "2025-07-29T21:22:09.941267Z",
-     "iopub.status.idle": "2025-07-29T21:22:10.253124Z",
-     "shell.execute_reply": "2025-07-29T21:22:10.252562Z"
+     "iopub.execute_input": "2025-07-29T21:36:28.513371Z",
+     "iopub.status.busy": "2025-07-29T21:36:28.513095Z",
+     "iopub.status.idle": "2025-07-29T21:36:28.850796Z",
+     "shell.execute_reply": "2025-07-29T21:36:28.850183Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:10.254845Z",
-     "iopub.status.busy": "2025-07-29T21:22:10.254679Z",
-     "iopub.status.idle": "2025-07-29T21:22:10.392684Z",
-     "shell.execute_reply": "2025-07-29T21:22:10.392124Z"
+     "iopub.execute_input": "2025-07-29T21:36:28.852449Z",
+     "iopub.status.busy": "2025-07-29T21:36:28.852275Z",
+     "iopub.status.idle": "2025-07-29T21:36:28.993144Z",
+     "shell.execute_reply": "2025-07-29T21:36:28.992504Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:10.394425Z",
-     "iopub.status.busy": "2025-07-29T21:22:10.394259Z",
-     "iopub.status.idle": "2025-07-29T21:22:10.794216Z",
-     "shell.execute_reply": "2025-07-29T21:22:10.793710Z"
+     "iopub.execute_input": "2025-07-29T21:36:28.994909Z",
+     "iopub.status.busy": "2025-07-29T21:36:28.994710Z",
+     "iopub.status.idle": "2025-07-29T21:36:29.394540Z",
+     "shell.execute_reply": "2025-07-29T21:36:29.393988Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:10.795911Z",
-     "iopub.status.busy": "2025-07-29T21:22:10.795752Z",
-     "iopub.status.idle": "2025-07-29T21:22:11.079124Z",
-     "shell.execute_reply": "2025-07-29T21:22:11.078614Z"
+     "iopub.execute_input": "2025-07-29T21:36:29.396298Z",
+     "iopub.status.busy": "2025-07-29T21:36:29.396111Z",
+     "iopub.status.idle": "2025-07-29T21:36:29.687509Z",
+     "shell.execute_reply": "2025-07-29T21:36:29.686901Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:11.080741Z",
-     "iopub.status.busy": "2025-07-29T21:22:11.080578Z",
-     "iopub.status.idle": "2025-07-29T21:22:11.082956Z",
-     "shell.execute_reply": "2025-07-29T21:22:11.082510Z"
+     "iopub.execute_input": "2025-07-29T21:36:29.689323Z",
+     "iopub.status.busy": "2025-07-29T21:36:29.689135Z",
+     "iopub.status.idle": "2025-07-29T21:36:29.691543Z",
+     "shell.execute_reply": "2025-07-29T21:36:29.691071Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:11.084414Z",
-     "iopub.status.busy": "2025-07-29T21:22:11.084265Z",
-     "iopub.status.idle": "2025-07-29T21:22:11.086801Z",
-     "shell.execute_reply": "2025-07-29T21:22:11.086363Z"
+     "iopub.execute_input": "2025-07-29T21:36:29.693130Z",
+     "iopub.status.busy": "2025-07-29T21:36:29.692959Z",
+     "iopub.status.idle": "2025-07-29T21:36:29.695677Z",
+     "shell.execute_reply": "2025-07-29T21:36:29.695218Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:11.088283Z",
-     "iopub.status.busy": "2025-07-29T21:22:11.088111Z",
-     "iopub.status.idle": "2025-07-29T21:22:12.135060Z",
-     "shell.execute_reply": "2025-07-29T21:22:12.134450Z"
+     "iopub.execute_input": "2025-07-29T21:36:29.697215Z",
+     "iopub.status.busy": "2025-07-29T21:36:29.697052Z",
+     "iopub.status.idle": "2025-07-29T21:36:30.926920Z",
+     "shell.execute_reply": "2025-07-29T21:36:30.926238Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpeCyZUH\", R: \"/tmp/RtmpX9nt1x\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmp1fOdNB\", R: \"/tmp/RtmpyBt5gp\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:12.136967Z",
-     "iopub.status.busy": "2025-07-29T21:22:12.136812Z",
-     "iopub.status.idle": "2025-07-29T21:22:12.541923Z",
-     "shell.execute_reply": "2025-07-29T21:22:12.541304Z"
+     "iopub.execute_input": "2025-07-29T21:36:30.928914Z",
+     "iopub.status.busy": "2025-07-29T21:36:30.928710Z",
+     "iopub.status.idle": "2025-07-29T21:36:31.387459Z",
+     "shell.execute_reply": "2025-07-29T21:36:31.386905Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:12.543709Z",
-     "iopub.status.busy": "2025-07-29T21:22:12.543538Z",
-     "iopub.status.idle": "2025-07-29T21:22:12.863581Z",
-     "shell.execute_reply": "2025-07-29T21:22:12.862988Z"
+     "iopub.execute_input": "2025-07-29T21:36:31.389430Z",
+     "iopub.status.busy": "2025-07-29T21:36:31.389238Z",
+     "iopub.status.idle": "2025-07-29T21:36:31.731538Z",
+     "shell.execute_reply": "2025-07-29T21:36:31.730905Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:12.865122Z",
-     "iopub.status.busy": "2025-07-29T21:22:12.864964Z",
-     "iopub.status.idle": "2025-07-29T21:22:12.871907Z",
-     "shell.execute_reply": "2025-07-29T21:22:12.871469Z"
+     "iopub.execute_input": "2025-07-29T21:36:31.733398Z",
+     "iopub.status.busy": "2025-07-29T21:36:31.733204Z",
+     "iopub.status.idle": "2025-07-29T21:36:31.741544Z",
+     "shell.execute_reply": "2025-07-29T21:36:31.741045Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:12.873444Z",
-     "iopub.status.busy": "2025-07-29T21:22:12.873280Z",
-     "iopub.status.idle": "2025-07-29T21:22:13.286144Z",
-     "shell.execute_reply": "2025-07-29T21:22:13.285636Z"
+     "iopub.execute_input": "2025-07-29T21:36:31.743265Z",
+     "iopub.status.busy": "2025-07-29T21:36:31.743084Z",
+     "iopub.status.idle": "2025-07-29T21:36:32.183877Z",
+     "shell.execute_reply": "2025-07-29T21:36:32.183220Z"
     }
    },
    "outputs": [
