--- a/examples/example09_joss_paper.ipynb
+++ b/examples/example09_joss_paper.ipynb
@@ -26,10 +26,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:37.867482Z",
-     "iopub.status.busy": "2025-07-29T21:22:37.867317Z",
-     "iopub.status.idle": "2025-07-29T21:22:38.813122Z",
-     "shell.execute_reply": "2025-07-29T21:22:38.812624Z"
+     "iopub.execute_input": "2025-07-29T21:36:58.379971Z",
+     "iopub.status.busy": "2025-07-29T21:36:58.379794Z",
+     "iopub.status.idle": "2025-07-29T21:36:59.388113Z",
+     "shell.execute_reply": "2025-07-29T21:36:59.387551Z"
     }
    },
    "outputs": [],
@@ -149,10 +149,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:38.815133Z",
-     "iopub.status.busy": "2025-07-29T21:22:38.814883Z",
-     "iopub.status.idle": "2025-07-29T21:22:38.833504Z",
-     "shell.execute_reply": "2025-07-29T21:22:38.833012Z"
+     "iopub.execute_input": "2025-07-29T21:36:59.390152Z",
+     "iopub.status.busy": "2025-07-29T21:36:59.389910Z",
+     "iopub.status.idle": "2025-07-29T21:36:59.409701Z",
+     "shell.execute_reply": "2025-07-29T21:36:59.409183Z"
     }
    },
    "outputs": [],
@@ -177,10 +177,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:38.835055Z",
-     "iopub.status.busy": "2025-07-29T21:22:38.834902Z",
-     "iopub.status.idle": "2025-07-29T21:22:38.837617Z",
-     "shell.execute_reply": "2025-07-29T21:22:38.837120Z"
+     "iopub.execute_input": "2025-07-29T21:36:59.411660Z",
+     "iopub.status.busy": "2025-07-29T21:36:59.411455Z",
+     "iopub.status.idle": "2025-07-29T21:36:59.414464Z",
+     "shell.execute_reply": "2025-07-29T21:36:59.413856Z"
     }
    },
    "outputs": [],
@@ -195,10 +195,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:38.839125Z",
-     "iopub.status.busy": "2025-07-29T21:22:38.838971Z",
-     "iopub.status.idle": "2025-07-29T21:22:39.563290Z",
-     "shell.execute_reply": "2025-07-29T21:22:39.562665Z"
+     "iopub.execute_input": "2025-07-29T21:36:59.416121Z",
+     "iopub.status.busy": "2025-07-29T21:36:59.415958Z",
+     "iopub.status.idle": "2025-07-29T21:37:00.182799Z",
+     "shell.execute_reply": "2025-07-29T21:37:00.182259Z"
     }
    },
    "outputs": [
@@ -292,10 +292,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:39.565060Z",
-     "iopub.status.busy": "2025-07-29T21:22:39.564891Z",
-     "iopub.status.idle": "2025-07-29T21:22:40.175419Z",
-     "shell.execute_reply": "2025-07-29T21:22:40.174737Z"
+     "iopub.execute_input": "2025-07-29T21:37:00.184678Z",
+     "iopub.status.busy": "2025-07-29T21:37:00.184496Z",
+     "iopub.status.idle": "2025-07-29T21:37:00.822176Z",
+     "shell.execute_reply": "2025-07-29T21:37:00.821590Z"
     }
    },
    "outputs": [],
@@ -322,10 +322,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:40.177584Z",
-     "iopub.status.busy": "2025-07-29T21:22:40.177397Z",
-     "iopub.status.idle": "2025-07-29T21:22:40.569451Z",
-     "shell.execute_reply": "2025-07-29T21:22:40.568923Z"
+     "iopub.execute_input": "2025-07-29T21:37:00.824218Z",
+     "iopub.status.busy": "2025-07-29T21:37:00.824006Z",
+     "iopub.status.idle": "2025-07-29T21:37:01.239449Z",
+     "shell.execute_reply": "2025-07-29T21:37:01.238780Z"
     }
    },
    "outputs": [
@@ -456,10 +456,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:40.571138Z",
-     "iopub.status.busy": "2025-07-29T21:22:40.570971Z",
-     "iopub.status.idle": "2025-07-29T21:22:40.901139Z",
-     "shell.execute_reply": "2025-07-29T21:22:40.900593Z"
+     "iopub.execute_input": "2025-07-29T21:37:01.241394Z",
+     "iopub.status.busy": "2025-07-29T21:37:01.241198Z",
+     "iopub.status.idle": "2025-07-29T21:37:01.588321Z",
+     "shell.execute_reply": "2025-07-29T21:37:01.587679Z"
     }
    },
    "outputs": [
@@ -510,10 +510,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:40.902878Z",
-     "iopub.status.busy": "2025-07-29T21:22:40.902703Z",
-     "iopub.status.idle": "2025-07-29T21:22:45.074390Z",
-     "shell.execute_reply": "2025-07-29T21:22:45.073745Z"
+     "iopub.execute_input": "2025-07-29T21:37:01.590343Z",
+     "iopub.status.busy": "2025-07-29T21:37:01.590152Z",
+     "iopub.status.idle": "2025-07-29T21:37:05.916225Z",
+     "shell.execute_reply": "2025-07-29T21:37:05.915688Z"
     }
    },
    "outputs": [
@@ -570,17 +570,17 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T21:22:45.076194Z",
-     "iopub.status.busy": "2025-07-29T21:22:45.076013Z",
-     "iopub.status.idle": "2025-07-29T21:22:45.547726Z",
-     "shell.execute_reply": "2025-07-29T21:22:45.547157Z"
+     "iopub.execute_input": "2025-07-29T21:37:05.918106Z",
+     "iopub.status.busy": "2025-07-29T21:37:05.917914Z",
+     "iopub.status.idle": "2025-07-29T21:37:06.419241Z",
+     "shell.execute_reply": "2025-07-29T21:37:06.418710Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fae50af9010>"
+       "<matplotlib.legend.Legend at 0x7f3bcaee3710>"
       ]
      },
      "execution_count": 9,
